# pine-script-zed

./: .gitignore  Cargo.toml  README.md  extension.toml
languages/pine/: config.toml  highlights.scm
pine-lsp/: Cargo.toml
pine-lsp/src/: ast.rs  builtins.rs  line_index.rs  linter.rs  main.rs  parser.rs  server.rs
src/: lib.rs
test/: run_test.sh
