[package]
name = "pine-lsp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Language server for TradingView Pine Script v6"
repository = "https://github.com/nuniesmith/pine-script-zed"

[[bin]]
name = "pine-lsp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
dashmap = "6.1"
serde_json = "1"
